# sopel-safety

./: NEWS  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yml
sopel_safety/: plugin.py
test/: test_urls.py
